Fix setting zen mode layout bug.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -406,7 +406,7 @@ img {
     flex-flow: row nowrap;
     justify-content:space-between;
 
-    margin: 5px 0px 0px 0px;
+    margin: 5px 0px 26px 0px;
 }
 
 .pinstate .boxradio {
